--- a/replies/error-replies.html
+++ b/replies/error-replies.html
@@ -155,7 +155,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="52-エラー返信"><a class="header" href="#52-エラー返信">5.2 エラー返信</a></h1>
-<p>400から599の範囲にエラー返信が見られます。</p>
+<p>400 から 599 の範囲にエラー返信が見られます。</p>
 <pre><code>401    ERR_NOSUCHNICK
       &quot;&lt;nickname&gt; :No such nick/channel&quot;
 </code></pre>
@@ -266,7 +266,7 @@
       &quot;&lt;nick&gt; :Erroneous nickname&quot;
 </code></pre>
 <ul>
-<li>定義された文字セットに該当しない文字を含む NICK メッセージを受信した後に返されます。有効なニックネームの詳細については、<a href="../the-irc-client-specification/message-format-in-augumented-bnf.html">2.3.1 節</a> を参照してください。</li>
+<li>定義された文字セットに該当しない文字を含む NICK メッセージを受信した後に返されます。有効なニックネームの詳細については、<a href="../the-irc-client-specification/message-format-in-augumented-bnf.html">2.3.1 項</a> を参照してください。</li>
 </ul>
 <pre><code>433    ERR_NICKNAMEINUSE
       &quot;&lt;nick&gt; :Nickname is already in use&quot;
