deploy: 5ed43bb88fe60b893f22897d6245238a6ee6e95e

--- a/current-problems/nicknames.html
+++ b/current-problems/nicknames.html
@@ -155,7 +155,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="71-ニックネーム"><a class="header" href="#71-ニックネーム">7.1 ニックネーム</a></h1>
-<p>IRC におけるニックネームの考え方は、ユーザがチャネル外で会話する際に非常に便利ですが、ニックネームのスペースは有限であり、そのようなものである以上、複数の人が同じニックネームを使いたいと思うことは珍しいことではありません。もしこのプロトコルを使って二人がニックネームを選んだ場合、どちらかが成功しないか、または両方がサーバの KILL（<a href="../message-details/kill-message.html">3.7.1 節</a> 参照）を使うことによって削除されるでしょう。</p>
+<p>IRC におけるニックネームの考え方は、ユーザがチャネル外で会話する際に非常に便利ですが、ニックネームのスペースは有限であり、そのようなものである以上、複数の人が同じニックネームを使いたいと思うことは珍しいことではありません。もしこのプロトコルを使って二人がニックネームを選んだ場合、どちらかが成功しないか、または両方がサーバの KILL（<a href="../message-details/kill-message.html">3.7.1 項</a> 参照）を使うことによって削除されるでしょう。</p>
 
                     </main>
 
