deploy: b17660d9f79039fc9642e59bbc115840fae4bf6f

--- a/message-details/stats-message.html
+++ b/message-details/stats-message.html
@@ -178,7 +178,7 @@ Parameters: [ &lt;query&gt; [ &lt;target&gt; ] ]
 </code></pre>
 <p>例：</p>
 <pre><code>STATS m
-    ; 接続中のサーバーのコマンド使用状況を確認するためのコマンド
+    ; 接続中のサーバのコマンド使用状況を確認するためのコマンド
 </code></pre>
 
                     </main>
