--- a/print.html
+++ b/print.html
@@ -821,7 +821,7 @@ Parameters: [ &lt;query&gt; [ &lt;target&gt; ] ]
 </code></pre>
 <p>例：</p>
 <pre><code>STATS m
-    ; 接続中のサーバーのコマンド使用状況を確認するためのコマンド
+    ; 接続中のサーバのコマンド使用状況を確認するためのコマンド
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="345-links-メッセージ"><a class="header" href="#345-links-メッセージ">3.4.5 Links メッセージ</a></h1>
 <pre><code>   Command: LINKS
