deploy: b9bd23e04d687883e7331b48346c47cc255a78b0

--- a/print.html
+++ b/print.html
@@ -539,7 +539,7 @@ PART #oz-ops,&amp;group5
 :WiZ!jto@tolsun.oulu.fi PART #playzone :I lost
     ; &quot;I lost&quot; というメッセージとともにチャネル &quot;#playzone&quot; を去るユーザ WiZ。
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="323-channel-モードメッセージ"><a class="header" href="#323-channel-モードメッセージ">3.2.3 Channel モードメッセージ</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="323-mode-メッセージ"><a class="header" href="#323-mode-メッセージ">3.2.3 Mode メッセージ</a></h1>
 <pre><code>   Command: MODE
 Parameters: &lt;channel&gt; *( ( &quot;-&quot; / &quot;+&quot; ) *&lt;modes&gt; *&lt;modeparams&gt; )
 </code></pre>
