--- a/message-details/channel-mode-message.html
+++ b/message-details/channel-mode-message.html
@@ -154,7 +154,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="323-channel-モードメッセージ"><a class="header" href="#323-channel-モードメッセージ">3.2.3 Channel モードメッセージ</a></h1>
+                        <h1 id="323-mode-メッセージ"><a class="header" href="#323-mode-メッセージ">3.2.3 Mode メッセージ</a></h1>
 <pre><code>   Command: MODE
 Parameters: &lt;channel&gt; *( ( &quot;-&quot; / &quot;+&quot; ) *&lt;modes&gt; *&lt;modeparams&gt; )
 </code></pre>
