deploy: 2756fb4da54642e211ae6cafbb9c18e1e5c05b20

--- a/print.html
+++ b/print.html
@@ -1185,7 +1185,7 @@ Parameters: [ &lt;target&gt; ]
 <pre><code>   Command: WALLOPS
 Parameters: &lt;Text to be sent&gt;
 </code></pre>
-<p>WALLOPS コマンドは、現在接続しているユーザのうち、自分に <code>w</code> ユーザモードを設定しているユーザ全てにメッセージを送信するために使用されます。（<a href="optional-features/../message-details/user-mode-message.html">3.1.5節 &quot;ユーザーモード&quot;</a> 参照）。</p>
+<p>WALLOPS コマンドは、現在接続しているユーザのうち、自分に <code>w</code> ユーザモードを設定しているユーザ全てにメッセージを送信するために使用されます。（<a href="optional-features/../message-details/user-mode-message.html">3.1.5 項 &quot;ユーザーモード&quot;</a> 参照）。</p>
 <p>WALLOPS をユーザコマンドとして実装した後、多くの人にメッセージを送る手段として、しばしば悪用されることがわかりました。このため、WALLOPS の実装では、サーバのみを WALLOPS の発信元として許可・認識することが推奨されます。</p>
 <p>数値返信：</p>
 <pre><code>        ERR_NEEDMOREPARAMS
