deploy: c1d22e4d391822e4a7a2f5fa6b56a375a3668eb0

--- a/print.html
+++ b/print.html
@@ -359,7 +359,7 @@ Parameters: &lt;nickname&gt;
 Parameters: &lt;user&gt; &lt;mode&gt; &lt;unused&gt; &lt;realname&gt;
 </code></pre>
 <p>USER コマンドは、接続の最初に使用し、新規ユーザのユーザ名、ホスト名、リアルネームを指定します。</p>
-<p><code>&lt;mode&gt;</code> パラメータには数値を指定し、サーバに登録する際にユーザモードを自動的に設定することができます。このパラメータはビットマスクで、2ビットだけが意味を持ちます。ビット2が設定されるとユーザモード <code>w</code> が設定され、ビット3が設定されるとユーザモード <code>i</code> が設定されます。（<a href="message-details/./user-mode-message.html">3.1.5 節 &quot;ユーザモード&quot;</a> を参照）。</p>
+<p><code>&lt;mode&gt;</code> パラメータには数値を指定し、サーバに登録する際にユーザモードを自動的に設定することができます。このパラメータはビットマスクで、2ビットだけが意味を持ちます。ビット2が設定されるとユーザモード <code>w</code> が設定され、ビット3が設定されるとユーザモード <code>i</code> が設定されます。（<a href="message-details/./user-mode-message.html">3.1.5 User モード</a> を参照）。</p>
 <p><code>&lt;realname&gt;</code> には空白文字が含まれることがあります。</p>
 <p>数値返信：</p>
 <pre><code>        ERR_NEEDMOREPARAMS              ERR_ALREADYREGISTRED
