deploy: b02984efd8da17e7616a8f71d21d167ea9bc3843

--- a/optional-features/away.html
+++ b/optional-features/away.html
@@ -160,7 +160,7 @@ Parameters: [ &lt;text&gt; ]
 </code></pre>
 <p>AWAY コマンドを使用すると、クライアントは自分宛の PRIVMSG コマンド（自分がいるチャネル宛ではない）に対して、自動返信文字列を設定することができます。サーバは、PRIVMSG コマンドを送信しているクライアントに自動応答を送ります。返信するサーバは、送信側クライアントが接続しているサーバのみです。</p>
 <p>AWAY コマンドは、1つのパラメータで AWAY メッセージを設定する場合と、パラメータなしで AWAY メッセージを削除する場合に使用します。</p>
-<p>AWAY メッセージはメモリと帯域幅のコストが高いため、クライアントとサーバ間の通信にのみ使用する必要があります。サーバは、他のサーバから受け取った AWAY メッセージを黙って無視することを選択できます。サーバ間でクライアントの離席状態を更新するためには、代わりにユーザモード <code>a</code> を使用すべきです。（<a href="../message-details/user-mode-message.html">3.1.5 節</a> を参照）</p>
+<p>AWAY メッセージはメモリと帯域幅のコストが高いため、クライアントとサーバ間の通信にのみ使用する必要があります。サーバは、他のサーバから受け取った AWAY メッセージを黙って無視することを選択できます。サーバ間でクライアントの離席状態を更新するためには、代わりにユーザモード <code>a</code> を使用すべきです。（<a href="../message-details/user-mode-message.html">3.1.5 項</a> を参照）</p>
 <p>数値返信：</p>
 <pre><code>        RPL_UNAWAY                    RPL_NOWAWAY
 </code></pre>
