--- a/print.html
+++ b/print.html
@@ -375,7 +375,7 @@ USER guest 8 * :Ronnie Reagan
 <pre><code>   Command: OPER
 Parameters: &lt;name&gt; &lt;password&gt;
 </code></pre>
-<p>一般ユーザは、OPER コマンドを使用してオペレータ権限を取得します。オペレータ権限を得るには，<code>&lt;name&gt;</code> と <code>&lt;password&gt;</code> の組み合わせが必要です。成功すると、新しいユーザモードを示す MODE メッセージ（<a href="message-details/./user-mode-message.html">3.1.5 節</a> を参照）がユーザに送信されます。</p>
+<p>一般ユーザは、OPER コマンドを使用してオペレータ権限を取得します。オペレータ権限を得るには，<code>&lt;name&gt;</code> と <code>&lt;password&gt;</code> の組み合わせが必要です。成功すると、新しいユーザモードを示す MODE メッセージ（<a href="message-details/./user-mode-message.html">3.1.5 項</a> を参照）がユーザに送信されます。</p>
 <p>数値返信：</p>
 <pre><code>        ERR_NEEDMOREPARAMS              RPL_YOUREOPER
         ERR_NOOPERHOST                  ERR_PASSWDMISMATCH
