deploy: de16cd989e3f5a21366dab7dee5dda1017a79b8d

--- a/print.html
+++ b/print.html
@@ -384,7 +384,7 @@ Parameters: &lt;name&gt; &lt;password&gt;
 <pre><code>OPER foo bar
     ; ユーザ名に &quot;foo&quot;、パスワードに &quot;bar&quot; を用いてオペレータ登録を試みる。
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="315-user-モードメッセージ"><a class="header" href="#315-user-モードメッセージ">3.1.5 User モードメッセージ</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="315-mode-メッセージ"><a class="header" href="#315-mode-メッセージ">3.1.5 Mode メッセージ</a></h1>
 <pre><code>   Command: MODE
 Parameters: &lt;nickname&gt;
             *( ( &quot;+&quot; / &quot;-&quot; ) *( &quot;i&quot; / &quot;w&quot; / &quot;o&quot; / &quot;O&quot; / &quot;r&quot; ) )
