deploy: 50596c4414eb579882487b88d2492aff9ceeed80

--- a/message-details/user-mode-message.html
+++ b/message-details/user-mode-message.html
@@ -154,7 +154,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="315-mode-メッセージ"><a class="header" href="#315-mode-メッセージ">3.1.5 Mode メッセージ</a></h1>
+                        <h1 id="315-user-mode-メッセージ"><a class="header" href="#315-user-mode-メッセージ">3.1.5 User Mode メッセージ</a></h1>
 <pre><code>   Command: MODE
 Parameters: &lt;nickname&gt;
             *( ( &quot;+&quot; / &quot;-&quot; ) *( &quot;i&quot; / &quot;w&quot; / &quot;o&quot; / &quot;O&quot; / &quot;r&quot; ) )
