deploy: 44b0e30f76d7efddec4b61ddf70d1e2553d8039a

--- a/print.html
+++ b/print.html
@@ -281,7 +281,7 @@ Internet Relay Chat: クライアントプロトコル
 <p><code>&lt;hostaddr&gt;</code> 構文は、IP アドレスのために従うべき形式を示すことのみを目的としてここで与えられています。これは、このプロトコルの唯一の実装が、基礎となるネットワークプロトコルとして TCP/IP を使用しているという事実を反映していますが、他のプロトコルを使用することを妨げるものではありません。</p>
 </li>
 <li>
-<p><code>&lt;hostname&gt;</code> の長さは最大63文字です。これは、(特に)インターネット上のホスト名が長くなる可能性があるため、プロトコルの制限事項となっています。IRC のメッセージは512文字に制限されているため、このような制限が必要なのです。63文字より長いホスト名から接続するクライアントは、ホスト名ではなく、ホスト（数字）アドレスを使って登録されます。</p>
+<p><code>&lt;hostname&gt;</code> の長さは最大63文字です。これは、（特に）インターネット上のホスト名が長くなる可能性があるため、プロトコルの制限事項となっています。IRC のメッセージは512文字に制限されているため、このような制限が必要なのです。63文字より長いホスト名から接続するクライアントは、ホスト名ではなく、ホスト（数字）アドレスを使って登録されます。</p>
 </li>
 <li>
 <p>このドキュメントの以下の章で使用されるいくつかのパラメータは、便宜上使用されている名前以外、特に何もないため、ここでは定義されていません。これらのパラメータは、<code>&lt;params&gt;</code> に定義された一般的な構文に従います。</p>
